--- a/index.html
+++ b/index.html
@@ -6,13 +6,65 @@
     <title>AI Universe Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.3/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <style>
+        body{
+            font-family: 'Work Sans', sans-serif;
+        }
+    </style>
 </head>
 <body>
     <header>
-
+        <nav class="navbar bg-slate-200">
+            <!-- Start -->
+            <div class="navbar-start lg:ml-48">
+              <div class="dropdown">
+                <label tabindex="0" class="btn btn-ghost btn-circle">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+                </label>
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                  <li><a>Homepage</a></li>
+                  <li><a>Contact Us</a></li>
+                  <li><a>About Us</a></li>
+                </ul>
+              </div>
+            </div>
+            <!-- Center -->
+            <div class="navbar-center">
+              <a class="btn btn-ghost normal-case text-2xl">Ai Online</a>
+            </div>
+            <!-- End -->
+            <div class="navbar-end lg:mr-48">
+              <button class="btn btn-ghost btn-circle">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+              </button>
+              <button class="btn btn-ghost btn-circle">
+                <div class="indicator">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
+                  <span class="badge badge-xs badge-primary indicator-item"></span>
+                </div>
+              </button>
+            </div>
+        </nav>
     </header>
-    <main>
+    <main class="container mx-auto">
+        <section class="mx-14 my-14">
+            <!-- Header -->
+             <h1 class="text-3xl font-semibold text-center">AI Universe Hub</h1>
+             <!-- Upper Button -->
+             <div class="text-center my-5">
+                <button class="btn btn-error text-white">Sort By Date</button>
+             </div>
+             <!-- Items -->
+             <div id="items-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
+             </div>
+             <div class="text-center my-6">
+                <button onclick="seeMore()" class="btn btn-error text-white">See More</button>
+             </div>
+        </section>
     </main>
     <footer>
 
