--- a/index.html
+++ b/index.html
@@ -61,10 +61,21 @@
              <div id="items-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
              </div>
-             <div class="text-center my-6">
+             <div id="see-more" class="text-center my-6 hidden">
                 <button onclick="seeMore()" class="btn btn-error text-white">See More</button>
              </div>
         </section>
+
+           <!-- You can open the modal using ID.showModal() method -->
+            <dialog id="see_more_modal" class="modal">
+            <form method="dialog" class="modal-box">
+            <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+            <div id="detail-info">
+                
+            </div>
+            </form>
+            </dialog>
+
     </main>
     <footer>
 
